tests/parser/extra_tokens.expected
<string>:1:7: error: expected Semicolon, not LParen
4 + 5 ()
      ^